--- a/install/templates/sampling/assets/manifest.json
+++ b/install/templates/sampling/assets/manifest.json
@@ -2,49 +2,49 @@
    "name": "React Minus",
    "start_url": ".",
    "theme_color": "#333",
-   "short_name": "reactive",
+   "short_name": "reactful",
    "display": "standalone",
    "background_color": "#333",
    "description": "A sample app",
    "icons": [
      {
-       "src": "reactive-48_x_48.png",
+       "src": "reactful-48_x_48.png",
        "sizes": "48x48",
        "type": "image/png",
        "purpose": "any maskable"
      },
      {
-       "src": "reactive-72_x_72.png",
+       "src": "reactful-72_x_72.png",
        "sizes": "72x72",
        "type": "image/png",
        "purpose": "any maskable"
      },
      {
-       "src": "reactive-96_x_96.png",
+       "src": "reactful-96_x_96.png",
        "sizes": "96x96",
        "type": "image/png",
        "purpose": "any maskable"
      },
      {
-       "src": "reactive-144_x_144.png",
+       "src": "reactful-144_x_144.png",
        "sizes": "144x144",
        "type": "image/png",
        "purpose": "any maskable"
      },
      {
-       "src": "reactive-168_x_168.png",
+       "src": "reactful-168_x_168.png",
        "sizes": "168x168",
        "type": "image/png",
        "purpose": "any maskable"
      },
      {
-       "src": "reactive-192_x_192.png",
+       "src": "reactful-192_x_192.png",
        "sizes": "192x192",
        "type": "image/png",
        "purpose": "any maskable"
      },
      {
-       "src": "reactive-512_x_512.png",
+       "src": "reactful-512_x_512.png",
        "sizes": "512x512",
        "type": "image/png",
        "purpose": "any maskable"
