--- a/install/common/tsconfig.json
+++ b/install/common/tsconfig.json
@@ -1,21 +1,23 @@
 {
-   "exclude": ["node_modules"],
+   "exclude": ["node_modules"], 
    "compilerOptions": {
-      "types": ["bun-types"],
-      "module": "esnext",
+      "rootDir": ".",
+      "jsx": "react",
       "target": "esnext",
-      "jsx": "react-jsx",
+      "module": "esnext",
+      "types": ["bun-types"],
       "moduleDetection": "auto",
       "moduleResolution": "bundler",
       "noEmit": true,
-      "strict": true,
+      "strict": false,
       "allowJs": true,
+      "sourceMap": true,
       "composite": true,
+      "declaration": true,
       "skipLibCheck": true,
       "noImplicitAny": false,
       "esModuleInterop": true,
       "downlevelIteration": true,
-      "allowImportingTsExtensions": true,
       "allowSyntheticDefaultImports": true,
       "forceConsistentCasingInFileNames": true
    }
