--- a/install/common/package.json
+++ b/install/common/package.json
@@ -4,25 +4,19 @@
    "module": "index.ts",
    "scripts": {
       "start": "bun --hot run index.tsx",
-      "debug": "bun run poc/index.tsx",
-      "build": "clear; bunx tsc-silent -p tsconfig.json --suppress 2786,1206@ 2339@/src/bundle/bundle.ts",
-      "tests": "bun run test-ut; bun run test-e2e",
-      "test-ut": "find . -type f -not -path './node_modules/*' -name '*.test.ts' | xargs bun test;",
-      "test-e2e": "npx playwright test"
+      "build": "rm -rf tsconfig.tsbuildinfo; bunx tsc -p tsconfig.json",
+      "clear": "rm -rf node_modules package-lock.json bun.lockb; bun i; bun run build"
    },
    "dependencies": {
-      "react": "latest",
-      "react-dom": "latest",
-      "ajaxness": "latest",
-      "zlib": "latest"
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "@reactful/extensions": "latest",
+      "@reactful/server": "latest",
+      "@reactful/web": "latest"
    },
    "devDependencies": {
-      "bun-types": "latest",
-      "@playwright/test": "latest",
-      "@types/css": "latest",
-      "@types/node": "latest",
-      "@types/react": "latest",
-      "playwright": "latest",
-      "typescript": "latest"
+      "bun-types": "^1.0.20",
+      "typescript": "^5.3.3",
+      "@types/react": "^18.2.57"
    }
 }
