--- a/install/templates/sampling/assets/manifest.json
+++ b/install/templates/sampling/assets/manifest.json
@@ -8,43 +8,43 @@
    "description": "A sample app",
    "icons": [
      {
-       "src": "reactful-48_x_48.png",
+       "src": "logo-48.png",
        "sizes": "48x48",
        "type": "image/png",
        "purpose": "any maskable"
      },
      {
-       "src": "reactful-72_x_72.png",
+       "src": "logo-72.png",
        "sizes": "72x72",
        "type": "image/png",
        "purpose": "any maskable"
      },
      {
-       "src": "reactful-96_x_96.png",
+       "src": "logo-96.png",
        "sizes": "96x96",
        "type": "image/png",
        "purpose": "any maskable"
      },
      {
-       "src": "reactful-144_x_144.png",
+       "src": "logo-144.png",
        "sizes": "144x144",
        "type": "image/png",
        "purpose": "any maskable"
      },
      {
-       "src": "reactful-168_x_168.png",
+       "src": "logo-168.png",
        "sizes": "168x168",
        "type": "image/png",
        "purpose": "any maskable"
      },
      {
-       "src": "reactful-192_x_192.png",
+       "src": "logo-192.png",
        "sizes": "192x192",
        "type": "image/png",
        "purpose": "any maskable"
      },
      {
-       "src": "reactful-512_x_512.png",
+       "src": "logo-512.png",
        "sizes": "512x512",
        "type": "image/png",
        "purpose": "any maskable"
