--- a/installation/package.json
+++ b/installation/package.json
@@ -1,17 +1,14 @@
 {
    "name": "@reactful/create",
-   "version": "0.0.57",
+   "version": "0.0.67",
    "main": "index.js",
    "type": "module",
    "description": "reactful scafold tool",
    "author": "jonathan de sena ribeiro <jsenaribeiro@gmail.com>",
+   "files": [ "index.js", "package.json" ],
+   "bin": { "@reactful/create": "index.js" },
+   "scripts": { "deploy": "npm publish --access public" },
    "license": "MIT",
-   "bin": {
-      "@reactful/create": "index.js"
-   },
-   "scripts": {
-      "deploy": "npm publish --access public"
-   },
    "dependencies": {
       "bun-types": "latest",
       "fs": "^0.0.1-security",
