--- a/extensions/package.json
+++ b/extensions/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "clear": "rm -rf node_modules npm; mkdir npm; bun i; bun run build",
     "build": "rm -rf tsconfig.tsbuildinfo; bunx tsc --declaration",
-    "deploy": "npm run build; npm publish --access public"
+    "patch": "npm run build; npm version patch; npm publish --access public"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
