--- a/installation/package.json
+++ b/installation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reactful/create",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "main": "index.js",
   "type": "module",
   "description": "reactful scafold tool",
@@ -12,7 +12,8 @@
     "index.js",
     "package.json",
     "templates",
-    "commons"
+    "commons",
+    "vscode"
   ],
   "scripts": {
     "start": "bun run index.js",
