--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "test-e2e": "npx playwright test",
     "clear": "rm -rf node_modules package-lock.json bun.lockb; bun i; bun run build",
     "fresh": "bun update @reactful/extensions @reactful/server @reactful/web",
-    "build": "rm -rf tsconfig.tsbuildinfo; bunx tsc -p tsconfig.json"
+    "build": "rm -rf tsconfig.tsbuildinfo; bunx tsc -p tsconfig.json",
+    "clear-all": "bun run clear-commons & bun run clear-extensions & bun run clear-server & bun run clear-web",
+    "clear-commons": "cd commons; bun i",
+    "clear-extensions": "cd extensions; bun i",
+    "clear-server": "cd server; bun i",
+    "clear-web": "cd web; bun i"
   },
   "dependencies": {
     "@playwright/test": "^1.41.2",
