--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "version": "0.1.3",
+  "version": "0.1.21",
   "main": "npm/index.js",
   "name": "@reactful/web",
   "description": "@reactful web framework",
@@ -22,26 +22,15 @@
   "dependencies": {
     "@reactful/commons": "latest",
     "@reactful/extensions": "latest",
-    "css": "^3.0.0",
-    "html-format": "^1.1.6",
-    "jsdom": "^23.0.1",
-    "jsonwebtoken": "latest",
-    "marked": "^11.1.1",
-    "os": "^0.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "zlib": "^1.0.5"
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
-    "@happy-dom/global-registrator": "^13.3.4",
-    "@types/css": "^0.0.37",
-    "@types/node": "^20.11.10",
-    "@types/react": "^18.2.58",
-    "bun-types": "^1.0.20",
-    "eslint": "^8.56.0",
-    "playwright": "^1.41.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
+    "eslint": "latest",
+    "bun-types": "latest",
+    "@types/react": "latest",
+    "playwright": "latest",
+    "typescript": "latest",
     "whatwg-mimetype": "latest"
   }
 }
