--- a/commons/tsconfig.json
+++ b/commons/tsconfig.json
@@ -1,16 +1,17 @@
 {
    "exclude": ["node_modules", "npm"],
    "compilerOptions": {
-      "strict": false,
-      "lib": ["esnext"],
+      "jsx": "react-jsx",
+      "types": ["bun-types"],
       "target": "esnext",
       "module": "esnext",
-      "outDir": "npm",
-      "rootDir": "src",
+      "outDir": "./npm",
+      "rootDir": "./src",
+      "strict": false,
       "sourceMap": true,
       "declaration": true,
       "esModuleInterop": true,
-      "moduleDetection": "force",
+      "moduleDetection": "auto",
       "moduleResolution": "bundler",
       "allowJs": true,
       "composite": true,
