--- a/installation/package.json
+++ b/installation/package.json
@@ -1,13 +1,11 @@
 {
   "name": "@reactful/create",
-  "version": "0.1.13",
+  "version": "0.1.15",
   "main": "index.js",
   "type": "module",
   "description": "reactful scafold tool",
   "author": "jonathan de sena ribeiro <jsenaribeiro@gmail.com>",
-  "bin": {
-    "@reactful/create": "index.js"
-  },
+  "bin": { "@reactful/create": "index.js" },
   "files": [
     "index.js",
     "package.json",
